--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,4 +1,3 @@
-
 html, body {
   margin: 0;
   padding: 0;
@@ -908,4 +907,5 @@ hr {
           font-size: 13px; }
         .btc-donate .address:after {
           left: 50%;
-          bottom: 2px; } }
+          bottom: 2px; } 
+      }
